Add an output canvas for testing.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -29,6 +29,13 @@ body {
 }
 
 
-#notSupported {
+#notSupported,
+#tempResult {
   display: none;
+}
+
+#tempResult {
+  display: none;
+  width: 640px;
+  height: 480px;
 }
